--- a/assets/index.html
+++ b/assets/index.html
@@ -1,48 +1,34 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <script src="./js/index.js" type="module"></script>
-      <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+      <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+      <!--script src="./js/index.js" type="module"></script -->
+
+      <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous" />
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <style>
+        html, button, input, select, textarea,
+          .pure-g [class *= "pure-u"] {
+          /* Set your content font stack here: */
+          font-family: 'Righteous', cursive, serif;
+        }
+
+        #profiles table {
+          text-align: center;
+        }
         div {
           background-color: #eee;
           text-align: center;
         }
+        legend {
+          display: none !important;
+        }
       </style>
     </head>
     <body>
-      <form id="calculator" class="pure-form pure-form-stacked">
-        <div id="profiles" class="pure-g">
-          <div id="shooter" class="pure-u-1-1">
-            Shooter
-          </div>
-          <div id="target" class="pure-u-1-1">
-            Target
-          </div>
-        </div>
-        <div id="mod-cover" class="pure-g">
-          <div id="in-cover" class="pure-u-1-2">
-            In cover
-          </div>
-          <div id="exposed" class="pure-u-1-2">
-            Out of cover
-          </div>
-        </div>
-        <div id="mod-fireteam" class="pure-g">
-          <div id="no-fireteam" class="pure-u-1-4">
-            None
-          </div>
-          <div id="fireteam-3" class="pure-u-1-4">
-            3
-          </div>
-          <div id="no-fireteam" class="pure-u-1-4">
-            4
-          </div>
-          <div id="no-fireteam" class="pure-u-1-4">
-            5
-          </div>
-        </div>
-
-      </form>
-    </body>
-  </html>
+      <div id="root"></div>
+  </body>
+</html>
